--- a/thank-you.html
+++ b/thank-you.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
+title: Toronto Web Design SEO PPC - Fivestar Media
 lang: en
 ref: thank-you
 permalink: /thank-you/
@@ -9,184 +9,8 @@ permalink: /thank-you/
 	{% include menu.html %}
 	<div class="jumbotron bg thank-you"></div>
 	<div class="banner contact">
-		<h2>Thank you! Your message has been received. We will be in touch with you shortly.</h2>
+		<h2>Thank you! Your message has been sent. We will be in touch with you shortly.</h2>
 	</div>
-	<div class="body-container">
-		<!-- <div class="row">
-			<div class="col-xs-12 serviceHeading">
-				<h1 class="toUpper bold">Website Design</h1>
-				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
-					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
-					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
-			</div>
-		</div> -->
-		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<form id="contactform" method="POST">
-					<input type="text" name="name" placeholder="Your name">
-					<input type="email" name="_replyto" placeholder="Your email">
-					<input type="hidden" name="_subject" value="Fivestar Media Contact Page" />
-					<input type="hidden" name="_next" value="https://fivestarmedia.com/" />
-					<textarea name="message" placeholder="Your message"></textarea>
-					<input type="text" name="_gotcha" style="display:none" />
-					<input type="submit" value="Send">
-				</form>
-				<script>
-					var contactform = document.getElementById('contactform');
-					contactform.setAttribute('action', '//formspree.io/' + 'fivestarmediahq' + '@' + 'gmail' + '.' + 'com');
-				</script>
-			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-		<!-- <div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div></div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Mobile Responsive</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
-			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
-			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div> -->
-
-		<!-- <div class="row">
-			<div class="col-xs-12 serviceHeading">
-				<h1 class="toUpper bold">Website Prices</h1>
-				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
-					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
-					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
-			</div>
-		</div>
-
-		<div class="row eqHeight greyerbg featuresContainer">
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Template</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Template+</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Custom</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Enterprise</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-		</div> -->
-	</div>
-	{% include footer.html %}
+	{% include footermaplesshelpless.html %}
 </body>
 </html>
