--- a/home.html
+++ b/home.html
@@ -8,18 +8,38 @@ permalink: /home/
 <body>
 	{% include menu.html %}
 	<div class="bg home">
-		<h1 class="splash"><span>Results-driven Website Design,</span><span>Search Engine Optimization</span><span>and Pay-per-click Marketing</span><span>to Maximize Your Leads.</span></h1>
-		<h2 class="splash"><span>Increase brand perception.</span><span>Generate maximum leads.</span><span>Grow your business.</span></h2>
-		<!-- <button id="bottomSplash"><a>(416) 464-6573</a></button> -->
+		<h1 class="splash">
+			<span>Results-driven Website Design,</span>
+			<span>Search Engine Optimization</span>
+			<span>and Pay-per-click Marketing</span>
+			<span>to Maximize Your Leads.</span>
+		</h1>
+		<h2 class="splash">
+			<span>Increase brand perception.</span>
+			<span>Generate maximum leads.</span>
+			<span>Grow your business.</span>
+		</h2>
 	</div>
 	<div class="banner">
-		<h2>We specialize in <a href="{{ site.baseurl }}/website-design/"><span class="underline bold">Website Design</span></a> and make awesome, functional, pixel-perfect websites. We then generate maximum leads by getting them to rank high in search engines through organic <a href="{{ site.baseurl }}/search-engine-optimization-seo/"><span class="underline bold">Search Engine Optimization</span></a> and strategic advertisement using <a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/"><span class="underline bold">Pay-per-click Marketing</span></a>.</h2>
+		<h2>We specialize in
+			<a href="{{ site.baseurl }}/website-design/">
+				<span class="underline bold">Website Design</span>
+			</a> and make awesome, functional, pixel-perfect websites. We then generate maximum leads by getting them to rank high in search
+			engines through organic
+			<a href="{{ site.baseurl }}/search-engine-optimization-seo/">
+				<span class="underline bold">Search Engine Optimization</span>
+			</a> and strategic advertisement using
+			<a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">
+				<span class="underline bold">Pay-per-click Marketing</span>
+			</a>.</h2>
 	</div>
 	<div class="body-container">
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1>Our Services</h1>
-				<h3>Fivestar Media provides creative digital marketing services for your company to succeed in today's connected world. Our services are designed to strengthen your online brand presence and accelerate your business. We work with you to find the best solution to your online marketing needs.</h3>
+				<h3>Fivestar Media provides creative digital marketing services for your company to succeed in today's connected world. Our
+					services are designed to strengthen your online brand presence and accelerate your business. We work with you to find
+					the best solution to your online marketing needs.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight">
@@ -31,9 +51,17 @@ permalink: /home/
 						</a>
 					</div>
 					<div class="serviceText serviceSpace">
-						<p class="bold"><a href="{{ site.baseurl }}/website-design/">Website Design</a></p>
-						<p><a href="{{ site.baseurl }}/website-design/">You only get one chance to make a first impression, so make it your best. Great online branding starts with having a solid website that is fast, easy to use and delivers a unique experience for your potential clients and work well with search engines.</a></p>
-						<p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p>
+						<p class="bold">
+							<a href="{{ site.baseurl }}/website-design/">Website Design</a>
+						</p>
+						<p>
+							<a href="{{ site.baseurl }}/website-design/">You only get one chance to make a first impression, so make it your best. Great online branding starts with having
+								a solid website that is fast, easy to use and delivers a unique experience for your potential clients and work well
+								with search engines.</a>
+						</p>
+						<p class="serviceLink bold">
+							<a href="{{ site.baseurl }}/website-design/">Learn More</a>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -45,10 +73,18 @@ permalink: /home/
 						</a>
 					</div>
 					<div class="serviceText serviceSpace">
-						<p class="bold"><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a></p>
-						<!-- <p><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Reach the top in search engines using organic SEO to increase traffic and generate more leads. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p> -->
-						<p><a href="{{ site.baseurl }}/website-design/">Get search engines to find new customers for you. Organic SEO substantially increases traffic to your website by getting it to rank high in Google and other search engines. When done right, it acts much like a digital magnet for your company.</a></p>
-						<p class="serviceLink bold"><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Learn More</a></p>
+						<p class="bold">
+							<a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a>
+						</p>
+						<p>
+							<a href="{{ site.baseurl }}/website-design/">Get search engines to find new customers for you. Organic SEO substantially increases traffic to your website by getting
+								it to rank high in Google and other search engines. When done right, it acts much like a digital magnet for your
+								company.
+							</a>
+						</p>
+						<p class="serviceLink bold">
+							<a href="{{ site.baseurl }}/search-engine-optimization-seo/">Learn More</a>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -60,10 +96,17 @@ permalink: /home/
 						</a>
 					</div>
 					<div class="serviceText serviceSpace">
-						<p class="bold"><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Pay-per-click Marketing</a></p>
-						<!-- <p><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Use social media marketing, email marketing and pay-per-click advertising to increase your leads. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p> -->
-						<p><a href="{{ site.baseurl }}/website-design/">Place strategic ads of your company on search engines and elsewhere on the internet. PPC lets you ultimate control over who gets to see them including the time, location and many other factors. You pay only if and when someone actually clicks them.</a></p>
-						<p class="serviceLink bold"><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Learn More</a></p>
+						<p class="bold">
+							<a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Pay-per-click Marketing</a>
+						</p>
+						<p>
+							<a href="{{ site.baseurl }}/website-design/">Place strategic ads of your company on search engines and elsewhere on the internet. PPC lets you ultimate control
+								over who gets to see them including the time, location and many other factors. You pay only if and when someone actually
+								clicks them.</a>
+						</p>
+						<p class="serviceLink bold">
+							<a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Learn More</a>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -71,49 +114,44 @@ permalink: /home/
 		<div class="row Why">
 			<div class="col-xs-12 serviceHeading">
 				<h1>Why Choose Us</h1>
-				<h3>Fivestar Media is committed to making your company grow and position it best for long term success. As your trusted technology partner, we strive to offer you service that is faster, cheaper and better than our competitors.</h3>
+				<h3>Fivestar Media is committed to making your company grow and position it best for long term success. As your trusted technology
+					partner, we strive to offer you service that is faster, cheaper and better than our competitors.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight Why">
 			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
-						<!-- <a href="{{ site.baseurl }}/website-design/"> -->
-							<img class="circular--square" src="{{ site.baseurl }}/images/professional.jpg">
-						<!-- </a> -->
+						<img class="circular--square" src="{{ site.baseurl }}/images/professional.jpg">
 					</div>
 					<div class="serviceText serviceSpace">
 						<p class="bold">Professional</p>
-						<p>At Fivestar Media, being professional doesn't just mean building excellent websites and promoting your company: it's about being there for you when you need our support. Your satisfaction matters more to us than anything else.</p>
-						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
+						<p>At Fivestar Media, being professional doesn't just mean building excellent websites and promoting your company: it's
+							about being there for you when you need our support. Your satisfaction matters more to us than anything else.</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
-						<!-- <a href="{{ site.baseurl }}/search-engine-optimization-seo/"> -->
-							<img class="circular--square" src="{{ site.baseurl }}/images/local.jpg">
-						<!-- </a> -->
+						<img class="circular--square" src="{{ site.baseurl }}/images/local.jpg">
 					</div>
 					<div class="serviceText serviceSpace">
 						<p class="bold">Local</p>
-						<p>All of our work is done locally by our in-house team. To ensure you are getting the highest quality service, we do not outsource any work to third parties or agencies. We are always just a telephone call or an email away.</p>
-						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
+						<p>All of our work is done locally by our in-house team. To ensure you are getting the highest quality service, we do
+							not outsource any work to third parties or agencies. We are always just a telephone call or an email away.</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
-						<!-- <a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/"> -->
-							<img class="circular--square" src="{{ site.baseurl }}/images/results.jpg">
-						<!-- </a> -->
+						<img class="circular--square" src="{{ site.baseurl }}/images/results.jpg">
 					</div>
 					<div class="serviceText serviceSpace">
 						<p class="bold">Results</p>
-						<p>Fivestar Media consults with you to design the optimal strategy that will deliver the best results for your company. Our work is guaranteed to increase your brand perception and the amount of visitors you get from your website.</p>
-						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
+						<p>Fivestar Media consults with you to design the optimal strategy that will deliver the best results for your company.
+							Our work is guaranteed to increase your brand perception and the amount of visitors you get from your website.</p>
 					</div>
 				</div>
 			</div>
@@ -121,4 +159,5 @@ permalink: /home/
 	</div>
 	{% include footer.html %}
 </body>
+
 </html>
