--- a/pay-per-click-ppc-marketing.html
+++ b/pay-per-click-ppc-marketing.html
@@ -8,18 +8,15 @@ permalink: /pay-per-click-ppc-marketing/
 <body>
 	{% include menu.html %}
 	<div class="jumbotron bg pay-per-click-marketing">
-		<!-- <h1 class="splash">Website Design</h1>
-		<h2 class="splash"><span>Your website is your company's</span><span>first impression, so make it.</span><span>the best.</span></h2> -->
 	</div>
-	<!-- <div class="banner">
-			<h2>We build the best websites.</h2>
-	</div> -->
 	<div class="body-container">
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1>Pay-per-click Marketing</h1>
-				<h3>Instantly bring your company to the top of search engine results. PPC Marketing allows you to advertise your company and generate leads with laser precision. You decide how much you want to spend and we create, manage and optimize your ads. You only pay if customers actually click on your ads, ensuring you get high quality leads to your website. We work with you construct a PPC campaign that delivers results.</h3>
-				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
+				<h3>Instantly bring your company to the top of search engine results. PPC Marketing allows you to advertise your company
+					and generate leads with laser precision. You decide how much you want to spend and we create, manage and optimize your
+					ads. You only pay if customers actually click on your ads, ensuring you get high quality leads to your website. We work
+					with you construct a PPC campaign that delivers results.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight icons Why">
@@ -32,99 +29,108 @@ permalink: /pay-per-click-ppc-marketing/
 				<img src="{{ site.baseurl }}/images/ppc-management.png">
 				<h3>PPC Management</h3>
 				<p class="serviceTextBox">We manage your PPC marketing campaign for maximum effectiveness and adjust your keywords to reduce waste.</p>
-		</div>
-		<div class="col-xs-12 col-md-3">
+			</div>
+			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/g.png">
 				<h3>Google AdWords</h3>
 				<p class="serviceTextBox">PPC advertisement is optimized to work best with Google Adwords, the largest and leading PPC network.</p>
-		</div>
-		<div class="col-xs-12 col-md-3">
+			</div>
+			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/bing-ads.png">
 				<h3>Bing Ads</h3>
 				<p class="serviceTextBox">Ads also adjusted for best performance with Microsoft's Bing Ads to target users outside of the Google network.</p>
-		</div>
 			</div>
-			<div class="row eqHeight icons Why secondRow">
-					<div class="col-xs-12 col-md-3">
-							<img src="{{ site.baseurl }}/images/keyword-research.png">
-							<h3>Keyword Research</h3>
-							<p class="serviceTextBox">The optimal keyphrases that searchers use to find products and services which relate to your company and its industry sector.</p>
-					</div>
-	
-				<div class="col-xs-12 col-md-3">
-							<img src="{{ site.baseurl }}/images/a.png">
-							<h3>Advertising Strategy</h3>
-							<p class="serviceTextBox">Reduce waste by targetting your ads specifically by time, location, language and other factors for maximum click-through-rate.</p>
-						</div>		
+		</div>
+		<div class="row eqHeight icons Why secondRow">
+			<div class="col-xs-12 col-md-3">
+				<img src="{{ site.baseurl }}/images/keyword-research.png">
+				<h3>Keyword Research</h3>
+				<p class="serviceTextBox">The optimal keyphrases that searchers use to find products and services which relate to your company and its industry
+					sector.</p>
+			</div>
+
+			<div class="col-xs-12 col-md-3">
+				<img src="{{ site.baseurl }}/images/a.png">
+				<h3>Advertising Strategy</h3>
+				<p class="serviceTextBox">Reduce waste by targetting your ads specifically by time, location, language and other factors for maximum click-through-rate.</p>
+			</div>
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/analytics.png">
 				<h3>Analytics Integration</h3>
 				<p class="serviceTextBox">Integrate AdWords data with Google Analytics in real-time to monitor and adjust your PPC campaign.</p>
-		</div>
-		<div class="col-xs-12 col-md-3">
-			<img src="{{ site.baseurl }}/images/review.png">
-			<h3>Reviews</h3>
-			<p class="serviceTextBox">Monthly reviews of PPC effectivity and adjustment your PPC campaign for continued performance.</p>
-	</div>
+			</div>
+			<div class="col-xs-12 col-md-3">
+				<img src="{{ site.baseurl }}/images/review.png">
+				<h3>Reviews</h3>
+				<p class="serviceTextBox">Monthly reviews of PPC effectivity and adjustment your PPC campaign for continued performance.</p>
+			</div>
 
-	</div>
-	<div class="row">
-		<div class="col-xs-12 serviceHeading">
-			<h1>PPC Benefits</h1>
-			<h3>Pay-per-click marketing allows your company to advertise in a fast, cost-effective and highly targeted manner on the internet to generate quality leads. Whereas SEO is generally a long-term lead generation strategy, PPC allows even recently launched websites to instantly get attention from potential customers.</h3>
-			<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 		</div>
-</div>	
+		<div class="row">
+			<div class="col-xs-12 serviceHeading">
+				<h1>PPC Benefits</h1>
+				<h3>Pay-per-click marketing allows your company to advertise in a fast, cost-effective and highly targeted manner on the
+					internet to generate quality leads. Whereas SEO is generally a long-term lead generation strategy, PPC allows even recently
+					launched websites to instantly get attention from potential customers.</h3>
+				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
+			</div>
+		</div>
 
-<div class="row eqHeight">
-	<div class="col-xs-12 col-md-5 featuresPadding">
-		<div class="featuresImg">
-			<img class="shadow" src="{{ site.baseurl }}/images/ppc-fast-results.png">
+		<div class="row eqHeight">
+			<div class="col-xs-12 col-md-5 featuresPadding">
+				<div class="featuresImg">
+					<img src="{{ site.baseurl }}/images/ppc-fast-results.png">
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-7 featuresPadding">
+				<div class="serviceDetail">
+					<h2>1. Fast Results</h2>
+					<h3>You can get up and running quickly with PPC. Compared with SEO which can take several months for tangible results, with
+						PPC the results are instant within minutes of launching your campaign.</h3>
+					<h3>PPC allows you to quickly cast a wide net to help you find new leads and customers.</h3>
+					<h3>Compared to other methods such as email and social media marketing, PPC allows you to target people outside of those
+						who are already aware of your brand and doesn't limit to you to existing followers or customers.</h3>
+				</div>
+			</div>
 		</div>
-	</div>
-	<div class="col-xs-12 col-md-7 featuresPadding">
-		<div class="serviceDetail">
-			<h2>1. Fast Results</h2>
-			<h3>You can get up and running quickly with PPC. Compared with SEO which can take several months for tangible results, with PPC the results are instant within minutes of launching your campaign.</h3>
-			<h3>PPC allows you to quickly cast a wide net to help you find new leads and customers.</h3>
-			<h3>Compared to other methods such as email and social media marketing, PPC allows you to target people outside of those who are already aware of your brand and doesn't limit to you to existing followers or customers.</h3>
-		</div>
-	</div>
-</div>
 
-<div class="row eqHeight reversible">
-	<div class="col-xs-12 col-md-5 featuresPadding">
-		<div class="featuresImg">
-			<img src="{{ site.baseurl }}/images/highly-targeted.jpg">
+		<div class="row eqHeight reversible">
+			<div class="col-xs-12 col-md-5 featuresPadding">
+				<div class="featuresImg">
+					<img src="{{ site.baseurl }}/images/highly-targeted.jpg">
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-7 featuresPadding">
+				<div class="serviceDetail">
+					<h2>2. Highly Targeted</h2>
+					<h3>PPC allows you to target your potential clients based on specific criteria such as location, time, day of week and many
+						other options.</h3>
+					<h3>In doing such, you get to filter potential clients to your criteria.</h3>
+					<h3>This includes both targeting keywords through text ads and running ads through remarketing based on past behaviours.</h3>
+				</div>
+			</div>
 		</div>
-	</div>
-	<div class="col-xs-12 col-md-7 featuresPadding">
-		<div class="serviceDetail">
-			<h2>2. Highly Targeted</h2>
-			<h3>PPC allows you to target your potential clients based on specific criteria such as location, time, day of week and many other options.</h3>
-			<h3>In doing such, you get to filter potential clients to your criteria.</h3>
-			<h3>This includes both targeting keywords through text ads and running ads through remarketing based on past behaviours.</h3>
-		</div>
-	</div>
-</div>
 
-<div class="row eqHeight">
-	<div class="col-xs-12 col-md-5 featuresPadding">
-		<div class="featuresImg">
-			<img class="shadow" src="{{ site.baseurl }}/images/pay-per-click-process.png">
-		</div>
-	</div>
+		<div class="row eqHeight">
+			<div class="col-xs-12 col-md-5 featuresPadding">
+				<div class="featuresImg">
+					<img src="{{ site.baseurl }}/images/pay-per-click-process.png">
+				</div>
+			</div>
 
-	<div class="col-xs-12 col-md-7 featuresPadding">
-		<div class="serviceDetail">
-			<h2>3. Under Your Control</h2>
-			<h3>While there are several nuances regarding campaign settings, PPC gives you ultimate control over a wide range of options on how you reach potential clients. This starts with keyword placement and how restrictive you want to be.</h3>
-			<h3>If you want to start small, you have a lot of budget flexibility. If you're seeing positive results, you can scale up immediately and if you want to take a break, you can pause your campaign immediately. This level of control is hard to do with other advertising channels.</h3>
+			<div class="col-xs-12 col-md-7 featuresPadding">
+				<div class="serviceDetail">
+					<h2>3. Under Your Control</h2>
+					<h3>While there are several nuances regarding campaign settings, PPC gives you ultimate control over a wide range of options
+						on how you reach potential clients. This starts with keyword placement and how restrictive you want to be.</h3>
+					<h3>If you want to start small, you have a lot of budget flexibility. If you're seeing positive results, you can scale up
+						immediately and if you want to take a break, you can pause your campaign immediately. This level of control is hard
+						to do with other advertising channels.</h3>
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
 
-<div class="row eqHeight reversible">
+		<div class="row eqHeight reversible">
 			<div class="col-xs-12 col-md-5 featuresPadding">
 				<div class="featuresImg">
 					<img src="{{ site.baseurl }}/images/ppc-measurable.png">
@@ -133,35 +139,44 @@ permalink: /pay-per-click-ppc-marketing/
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
 					<h2>4. Measurable</h2>
-					<h3>One of the biggest benefits of PPC advertising with Google AdWords is that it's easy to measure and track: simply link the AdWords tool together with Google Analytics.</h3>
-					<h3>You'll get all high-level performance statistics including impressions, clicks and conversions. It's easy to determine how your campaigns are performing and which keywords are driving your traffic, which isn't as obvious in other advertising channels.</h3>
+					<h3>One of the biggest benefits of PPC advertising with Google AdWords is that it's easy to measure and track: simply link
+						the AdWords tool together with Google Analytics.</h3>
+					<h3>You'll get all high-level performance statistics including impressions, clicks and conversions. It's easy to determine
+						how your campaigns are performing and which keywords are driving your traffic, which isn't as obvious in other advertising
+						channels.</h3>
 				</div>
 			</div>
 		</div>
 		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-5 featuresPadding">
 				<div class="featuresImg">
-					<img class="shadow" src="{{ site.baseurl }}/images/ppc-marketing-data.jpg">
+					<img src="{{ site.baseurl }}/images/ppc-marketing-data.jpg">
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
 					<h2>5. Marketing Data</h2>
-					<h3>PPC gives you a wealth of marketing data beyond even whats available directly in Google AdWords. PPC data from impression, click and conversion can further refine a website's SEO strategy.</h3>
-					<h3>You can also integrate third-party tools to guage where your competition is to help you learn how much market share you can gain.</h3>
+					<h3>PPC gives you a wealth of marketing data beyond even whats available directly in Google AdWords. PPC data from impression,
+						click and conversion can further refine a website's SEO strategy.</h3>
+					<h3>You can also integrate third-party tools to guage where your competition is to help you learn how much market share
+						you can gain.</h3>
 				</div>
 			</div>
 		</div>
 
 		<div class="row Why">
 			<div class="col-xs-12 serviceHeading">
-					<h1>Pay-per-click Pricing</h1>
-					<h3>Call us today at {% include telnumberlink.html %} to learn more about our Pay-per-click Marketing packages. You can also use our <a href="{{ site.baseurl }}/contact/"><span class="bold">Contact Form</span></a> or send us an email at {% include emaillink.html %} at your convenience.</h3>
+				<h1>Pay-per-click Pricing</h1>
+				<h3>Call us today at {% include telnumberlink.html %} to learn more about our Pay-per-click Marketing packages. You can also
+					use our
+					<a href="{{ site.baseurl }}/contact/">
+						<span class="bold">Contact Form</span>
+					</a> or send us an email at {% include emaillink.html %} at your convenience.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight Why featuresContainer">
 			<div class="col-xs-12 col-md-3 features">
-				<ul class="shadow">
+				<ul>
 					<h2 class="bold">Basic</h2>
 					<h2 class="bold">$700</h2>
 					<li>ABC</li>
@@ -173,7 +188,7 @@ permalink: /pay-per-click-ppc-marketing/
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul class="shadow">
+				<ul>
 					<h2 class="bold">Aggressive</h2>
 					<h2 class="bold">$700</h2>
 					<li>ABC</li>
@@ -188,7 +203,7 @@ permalink: /pay-per-click-ppc-marketing/
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul class="shadow">
+				<ul>
 					<h2 class="bold">Market Leader</h2>
 					<h2 class="bold">$700</h2>
 					<li>ABC</li>
@@ -206,7 +221,7 @@ permalink: /pay-per-click-ppc-marketing/
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul class="shadow">
+				<ul>
 					<h2 class="bold">Enterprise</h2>
 					<h2 class="bold">$CALL</h2>
 					<li>ABC</li>
