--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@ permalink: /home/
 					</div>
 					<div class="serviceText serviceSpace">
 						<p class="bold">Results</p>
-						<p>Fivestar Media consults with you to design the optimal strategy that will deliver the best results for your company.
+						<p>Fivestar Media consults with you to design the strategy that will deliver the best results for your company.
 							Our work is guaranteed to increase your brand perception and the amount of visitors you get from your website.</p>
 					</div>
 				</div>
