--- a/home.html
+++ b/home.html
@@ -24,14 +24,13 @@ permalink: /home/
 		<h2>We specialize in
 			<a href="{{ site.baseurl }}/website-design/">
 				<span class="underline bold">Website Design</span>
-			</a> and make awesome, functional, pixel-perfect websites. We then generate maximum leads by getting them to rank high in search
-			engines through organic
+			</a> and make awesome, functional, pixel-perfect websites. We then make them generate maximum leads by ranking them high in search
+			engines through 
 			<a href="{{ site.baseurl }}/search-engine-optimization-seo/">
 				<span class="underline bold">Search Engine Optimization</span>
 			</a> and strategic advertisement using
 			<a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">
-				<span class="underline bold">Pay-per-click Marketing</span>
-			</a>.</h2>
+				<span class="underline bold">Pay-per-click Marketing</span></a>.</h2>
 	</div>
 	<div class="body-container">
 		<div class="row">
@@ -92,7 +91,7 @@ permalink: /home/
 				<div class="serviceContainer">
 					<div class="serviceIcon">
 						<a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">
-							<img class="circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
+							<img class="circular--square" src="{{ site.baseurl }}/images/ppc-pay-per-click-marketing.jpg">
 						</a>
 					</div>
 					<div class="serviceText serviceSpace">
