--- a/pay-per-click-ppc-marketing.html
+++ b/pay-per-click-ppc-marketing.html
@@ -71,7 +71,7 @@ permalink: /pay-per-click-ppc-marketing/
 				<h1>PPC Benefits</h1>
 				<h3>Pay-per-click marketing allows your company to advertise in a fast, cost-effective and highly targeted manner on the
 					internet to generate quality leads. Whereas SEO is generally a long-term lead generation strategy, PPC allows even recently
-					launched websites to instantly get attention from potential customers.</h3>
+					launched websites to acquire new leads from potential clients.</h3>
 				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 			</div>
 		</div>
