--- a/home.html
+++ b/home.html
@@ -24,8 +24,8 @@ permalink: /home/
 		<h2>We specialize in
 			<a href="{{ site.baseurl }}/website-design/">
 				<span class="underline bold">Website Design</span>
-			</a> and make awesome, functional, pixel-perfect websites. We then make them generate maximum leads by ranking them high in search
-			engines through 
+			</a> and make awesome, functional, pixel-perfect websites. We then get them to generate maximum leads by ranking them high in search
+			engines through organic 
 			<a href="{{ site.baseurl }}/search-engine-optimization-seo/">
 				<span class="underline bold">Search Engine Optimization</span>
 			</a> and strategic advertisement using
