--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@ layout: page
 title: Toronto Web Design SEO PPC - Fivestar Media
 lang: en
 ref: home
-permalink: /home/
+permalink: /
 ---
 <body>
 	{% include menu.html %}
@@ -99,8 +99,8 @@ permalink: /home/
 							<a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Pay-per-click Marketing</a>
 						</p>
 						<p>
-							<a href="{{ site.baseurl }}/website-design/">Place strategic ads of your company on search engines and elsewhere on the internet. PPC lets you ultimate control
-								over who gets to see them including the time, location and many other factors. You pay only if and when someone actually
+							<a href="{{ site.baseurl }}/website-design/">Place strategic ads of your company on search engines and elsewhere instantly on the internet. PPC lets you ultimate control
+								over who gets to see them including the time, location and many other factors. You pay only when someone actually
 								clicks them.</a>
 						</p>
 						<p class="serviceLink bold">
