--- a/search-engine-optimization-seo.html
+++ b/search-engine-optimization-seo.html
@@ -57,7 +57,7 @@ permalink: /search-engine-optimization-seo/
 			</div>
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/content-writing.png">
-				<h3>Content Writing</h3>
+				<h3>Copywriting</h3>
 				<p class="serviceTextBox">Initial posts relating to your company products and services with industry-specific articles to jumpstart your blog.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
@@ -71,8 +71,8 @@ permalink: /search-engine-optimization-seo/
 				<h1>SEO Process</h1>
 				<h3>Our thorough, research-focused SEO process ensures that your campaign gets the best results as quickly as possible. Unlike
 					some of our competitors, we use only ethical, white hat techniques for long-term results. Before we proceed, we conduct
-					a free audit to give you a clear report of what you can expect to gain from our services.</h3>
-			</div>
+					a free audit to give you a clear report of what you can expect to gain from our services. After the Initial Campaign, you only need to pay for monthly optimization to progressively increase and maintain your rankings.</h3>
+				</div>
 		</div>
 		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-5 featuresPadding">
@@ -182,69 +182,74 @@ permalink: /search-engine-optimization-seo/
 		</div>
 		<div class="row eqHeight Why featuresContainer">
 			<div class="col-xs-12 col-md-3 features">
-				<ul class="shadow">
+				<ul>
 					<h2 class="bold">Basic</h2>
-					<h2 class="bold">$400</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">$500/month</h2>
+					<li>*after $1,000 Initial Campaign Investment</li>
+					<li>Up to 30 Keywords and Keyphrases</li>
+					<li>In-depth Keyword Research</li>
+					<li>Google and Bing Optimized</li>
+					<li>Monthly Review</li>
+					<li>Detailed SEO Audit</li>
+					<li>Detailed SEO Strategy</li>
+					<li>Onsite Updates</li>
+					<li>XML Sitemap</li>
+					<li>Google Analytics Setup</li>
+					<li>3 Analytics Custom Dashboards</li>
+					<li>4 Initial SEO Blog Posts</li>
+					<li>2 Quarterly SEO Copywriting Posts</li>
+					<li>1 Quarterly Link Assets</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul class="shadow">
+				<ul>
 					<h2 class="bold">Aggressive</h2>
-					<h2 class="bold">$800</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">$1,000/month</h2>
+					<li>*after $2,000 Initial Campaign Investment</li>
+					<li>Up to 80 Keywords and Keyphrases</li>
+					<li>In-depth Keyword Research</li>
+					<li>Google and Bing Optimized</li>
+					<li>Monthly Review</li>
+					<li>Detailed SEO Audit</li>
+					<li>Detailed SEO Strategy</li>
+					<li>Onsite Updates</li>
+					<li>XML Sitemap</li>
+					<li>Google Analytics Setup</li>
+					<li>4 Analytics Custom Dashboards</li>
+					<li>8 Initial SEO Blog Posts</li>
+					<li>4 Quarterly SEO Copywriting Posts</li>
+					<li>2 Quarterly Link Assets</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul class="shadow">
+				<ul>
 					<h2 class="bold">Market Leader</h2>
-					<h2 class="bold">$1,200</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">$1,500/month</h2>
+					<li>*after $3,000 Initial Campaign Investment</li>
+					<li>Up to 150 Keywords and Keyphrases</li>
+					<li>In-depth Keyword Research</li>
+					<li>Google and Bing Optimized</li>
+					<li>Monthly Review</li>
+					<li>Detailed SEO Audit</li>
+					<li>Detailed SEO Strategy</li>
+					<li>Onsite Updates</li>
+					<li>XML Sitemap</li>
+					<li>Google Analytics Setup</li>
+					<li>8 Analytics Custom Dashboards</li>
+					<li>16 Initial SEO Blog Posts</li>
+					<li>8 Quarterly SEO Copywriting Posts</li>
+					<li>3 Quarterly Link Assets</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
-				<ul class="shadow">
+				<ul>
 					<h2 class="bold">Enterprise</h2>
-					<h2 class="bold">$2,000+</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">$2,000+/month</h2>
+					<li>Custom Keywords and Keyphrases</li>
+					<li>Custom Analytics Custom Dashboards</li>
+					<li>Custom Initial SEO Blog Posts</li>
+					<li>Custom Quarterly SEO Copywriting Posts</li>
+					<li>Custom Quarterly Link Assets</li>
 				</ul>
 			</div>
 		</div>
