--- a/website-design.html
+++ b/website-design.html
@@ -38,7 +38,7 @@ permalink: /website-design/
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/copyrighting.png">
 				<h3>Copyrighting</h3>
-				<p class="serviceTextBox">Let us help you with presenting your products and services with engaging content to take action on your website.</p>
+				<p class="serviceTextBox">Convey your message professionally with articulate information design to encourage clients to take action.</p>
 			</div>
 		</div>
 		<div class="row eqHeight icons Why secondRow">
@@ -82,7 +82,7 @@ permalink: /website-design/
 					<h2>Template</h2>
 					<h3>Fivestar Media understands the importance of having a well-designed website to convey strong brand presence on the internet.
 						At the same time, we understand that not everyone needs a custom made website to start off with.</h3>
-					<h3 class="bold">Template based websites are an excellent, cost-effective solution for small businesses with a single service line from
+					<h3 class="bold">Template based websites are an excellent, affordable solution for small businesses with a single service line from
 						one location.</h3>
 				</div>
 			</div>
@@ -97,8 +97,8 @@ permalink: /website-design/
 			<div class="col-xs-12 col-md-8 featuresPadding">
 				<div class="serviceDetail">
 					<h2>Template+</h2>
-					<h3>These templates are designed for companies that have multiple service lines or industries served.
-						<span class="bold">They fit a wide range of companies from HVAC companies, local contractors, financial services and manufacturing firms</span>.</h3>
+				<h3>Our larger templates are designed for companies that have multiple service lines or industries served.</h3>
+						<h3><span class="bold">This is cost-effective way to build a website for a wide variety of companies from local contractors, financial services, real estate and manufacturing firms</span>.</h3>
 					<h3>These websites typically take four weeks to complete from start to finish.</h3>
 				</div>
 			</div>
@@ -132,9 +132,9 @@ permalink: /website-design/
 			<div class="col-xs-12 col-md-8 featuresPadding">
 				<div class="serviceDetail">
 					<h2>Enterprise</h2>
-					<h3>These enterprise-level websites are designed for businesses that require advanced, custom functionality either for themselves
-						or from their clients. These include systems that require logging in, scheduling, collaboration, back-up, redundancy
-						and other advanced features.</h3>
+					<h3>Our enterprise-level websites are designed for businesses that require advanced, custom functionality either for themselves
+						or from their clients. These include systems that require logging in, scheduling, collaboration, back-up, redundancy,
+						multilingual and other advanced features.</h3>
 					<h3 class="bold">We take an engineering approach for our largest projects. A prototype website is developed beforehand and tested with
 						potential clients to ensure smooth functionality across the entire team.</h3>
 					<h3>The amount of time required to develop these websites varies from four to eight weeks or more.</h3>
@@ -164,10 +164,9 @@ permalink: /website-design/
 					<li>Copyrighting</li>
 					<li>Social Media Integration</li>
 					<li>Google Maps</li>
-					<li>Photosourcing</li>
+					<li>Photo Sourcing</li>
 					<li>2 Rounds of Revisions</li>
 					<li>Contact Form</li>
-					<li>Mailing List</li>
 					<li>XML Sitemap</li>
 					<li>*Additional Pages $70 each</li>
 				</ul>
@@ -185,7 +184,7 @@ permalink: /website-design/
 					<li>Copyrighting</li>
 					<li>Social Media Integration</li>
 					<li>Google Maps</li>
-					<li>Photosourcing</li>
+					<li>Photo Sourcing</li>
 					<li>3 Rounds of Revisions</li>
 					<li>Contact Form</li>
 					<li>Mailing List</li>
@@ -199,7 +198,7 @@ permalink: /website-design/
 					<h2 class="bold">Custom</h2>
 					<h2 class="bold">$2,700</h2>
 					<li>5 Page Website</li>
-					<li>2 Page Custom Mock-up</li>
+					<li>2 Page Prototype</li>
 					<li>Custom CMS</li>
 					<li>Hand-coded from Scratch</li>
 					<li>Static Design</li>
@@ -210,7 +209,7 @@ permalink: /website-design/
 					<li>Social Media Integration</li>
 					<li>Google Maps</li>
 					<li>6 Custom Icons</li>
-					<li>Photosourcing</li>
+					<li>Photo Sourcing</li>
 					<li>3 Rounds of Revisions</li>
 					<li>Contact Form</li>
 					<li>Mailing List</li>
@@ -224,13 +223,13 @@ permalink: /website-design/
 					<h2 class="bold">Enterprise</h2>
 					<h2 class="bold">$5,000+</h2>
 					<li>5 Page Website</li>
-					<li>5 Page Custom Mock-up</li>
-					<li>Will Travel to Your Location</li>
+					<li>5 Page Prototype</li>
+					<li>UX Analysis</li>
+					<li>A/B Testing</li>
 					<li>Custom CMS</li>
 					<li>Hand-coded from Scratch</li>
 					<li>Static Design</li>
 					<li>Competitor Research</li>
-					<li>A/B Testing</li>
 					<li>2-hour Brainstorming Session</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
@@ -238,7 +237,7 @@ permalink: /website-design/
 					<li>Social Media Integration</li>
 					<li>Custom Google Maps</li>
 					<li>10 Custom Icons</li>
-					<li>Photosourcing</li>
+					<li>Photo Sourcing</li>
 					<li>3 Rounds of Revisions</li>
 					<li>Contact Form</li>
 					<li>Mailing List</li>
