--- a/pay-per-click-ppc-marketing.html
+++ b/pay-per-click-ppc-marketing.html
@@ -72,7 +72,6 @@ permalink: /pay-per-click-ppc-marketing/
 				<h3>Pay-per-click marketing allows your company to advertise in a fast, cost-effective and highly targeted manner on the
 					internet to generate quality leads. Whereas SEO is generally a long-term lead generation strategy, PPC allows even recently
 					launched websites to acquire new leads from potential clients.</h3>
-				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 			</div>
 		</div>
 
@@ -86,7 +85,7 @@ permalink: /pay-per-click-ppc-marketing/
 				<div class="serviceDetail">
 					<h2>1. Fast Results</h2>
 					<h3>You can get up and running quickly with PPC. Compared with SEO which can take several months for tangible results, with
-						PPC the results are instant within minutes of launching your campaign.</h3>
+						PPC the placement of ads are instant within minutes of launching your campaign.</h3>
 					<h3>PPC allows you to quickly cast a wide net to help you find new leads and customers.</h3>
 					<h3>Compared to other methods such as email and social media marketing, PPC allows you to target people outside of those
 						who are already aware of your brand and doesn't limit to you to existing followers or customers.</h3>
@@ -178,67 +177,63 @@ permalink: /pay-per-click-ppc-marketing/
 			<div class="col-xs-12 col-md-3 features">
 				<ul>
 					<h2 class="bold">Basic</h2>
-					<h2 class="bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">$200/month</h2>
+					<li>Up to $2,500 Monthly PPC Spend</li>
+					<li>Up to 400 Keywords in Campaign</li>
+					<li>In-depth Keyword Research</li>
+					<li>Detailed PPC Strategy</li>
+					<li>Google PPC Network</li>
+					<li>Google Analytics Integration</li>
+					<li>Monthly Review</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
 				<ul>
 					<h2 class="bold">Aggressive</h2>
-					<h2 class="bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">12%/month</h2>
+					<li>Up to $5,000 Monthly PPC Spend</li>
+					<li>Up to 2,000 Keywords in Campaign</li>
+					<li>In-depth Keyword Research</li>
+					<li>Detailed PPC Strategy</li>
+					<li>Google PPC Network</li>
+					<li>Bing PPC Network</li>
+					<li>Ad Campaign Testing</li>
+					<li>Strategic Bid Management</li>
+					<li>Google Analytics Integration</li>
+					<li>Monthly Review</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
 				<ul>
 					<h2 class="bold">Market Leader</h2>
-					<h2 class="bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">10%/month</h2>
+					<li>Over $5,000+ Monthly PPC Spend</li>
+					<li>Up to 10,000 Keywords in Campaign</li>
+					<li>In-depth Keyword Research</li>
+					<li>Detailed PPC Strategy</li>
+					<li>Google PPC Network</li>
+					<li>Bing PPC Network</li>
+					<li>Ad Campaign Testing</li>
+					<li>Strategic Bid Management</li>
+					<li>Google Analytics Integration</li>
+					<li>Monthly Review</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
 				<ul>
 					<h2 class="bold">Enterprise</h2>
-					<h2 class="bold">$CALL</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">8%/month</h2>
+					<li>Over $10,000+ Monthly PPC Spend</li>
+					<li>Custom Keywords in Campaign</li>
+					<li>Multilingual Campaign</li>
+					<li>In-depth Keyword Research</li>
+					<li>Detailed PPC Strategy</li>
+					<li>Google PPC Network</li>
+					<li>Bing PPC Network</li>
+					<li>Ad Campaign Testing</li>
+					<li>Strategic Bid Management</li>
+					<li>Google Analytics Integration</li>
+					<li>Monthly Review</li>
 				</ul>
 			</div>
 		</div>
