--- a/website-design.html
+++ b/website-design.html
@@ -155,10 +155,9 @@ permalink: /website-design/
 				<ul>
 					<h2 class="bold">Template</h2>
 					<h2 class="bold">$700</h2>
-					<li>3 Page Website</li>
+					<li>3 Pages Included</li>
 					<li>WordPress Template</li>
 					<li>Customization of Theme</li>
-					<li>1-hour Brainstorming Session</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
 					<li>Copyrighting</li>
@@ -175,10 +174,9 @@ permalink: /website-design/
 				<ul>
 					<h2 class="bold">Template+</h2>
 					<h2 class="bold">$1,700</h2>
-					<li>5 Page Website</li>
+					<li>5 Pages Included</li>
 					<li>WordPress Template</li>
 					<li>Customization of Theme</li>
-					<li>1-hour Brainstorming Session</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
 					<li>Copyrighting</li>
@@ -197,12 +195,11 @@ permalink: /website-design/
 				<ul>
 					<h2 class="bold">Custom</h2>
 					<h2 class="bold">$2,700</h2>
-					<li>5 Page Website</li>
+					<li>5 Pages Included</li>
 					<li>2 Page Prototype</li>
 					<li>Custom CMS</li>
 					<li>Hand-coded from Scratch</li>
 					<li>Static Design</li>
-					<li>2-hour Brainstorming Session</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
 					<li>Copyrighting</li>
@@ -222,7 +219,7 @@ permalink: /website-design/
 				<ul>
 					<h2 class="bold">Enterprise</h2>
 					<h2 class="bold">$5,000+</h2>
-					<li>5 Page Website</li>
+					<li>5 Pages Included</li>
 					<li>5 Page Prototype</li>
 					<li>UX Analysis</li>
 					<li>A/B Testing</li>
@@ -230,7 +227,6 @@ permalink: /website-design/
 					<li>Hand-coded from Scratch</li>
 					<li>Static Design</li>
 					<li>Competitor Research</li>
-					<li>2-hour Brainstorming Session</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
 					<li>Copyrighting</li>
