--- a/website-design.html
+++ b/website-design.html
@@ -37,7 +37,7 @@ permalink: /website-design/
 			</div>
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/copyrighting.png">
-				<h3>Copyrighting</h3>
+				<h3>Copywriting</h3>
 				<p class="serviceTextBox">Convey your message professionally with articulate information design to encourage clients to take action.</p>
 			</div>
 		</div>
@@ -160,7 +160,7 @@ permalink: /website-design/
 					<li>Customization of Theme</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
-					<li>Copyrighting</li>
+					<li>Copywriting</li>
 					<li>Social Media Integration</li>
 					<li>Google Maps</li>
 					<li>Photo Sourcing</li>
@@ -179,7 +179,7 @@ permalink: /website-design/
 					<li>Customization of Theme</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
-					<li>Copyrighting</li>
+					<li>Copywriting</li>
 					<li>Social Media Integration</li>
 					<li>Google Maps</li>
 					<li>Photo Sourcing</li>
@@ -202,7 +202,7 @@ permalink: /website-design/
 					<li>Static Design</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
-					<li>Copyrighting</li>
+					<li>Copywriting</li>
 					<li>Social Media Integration</li>
 					<li>Google Maps</li>
 					<li>6 Custom Icons</li>
@@ -229,7 +229,7 @@ permalink: /website-design/
 					<li>Competitor Research</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
-					<li>Copyrighting</li>
+					<li>Copywriting</li>
 					<li>Social Media Integration</li>
 					<li>Custom Google Maps</li>
 					<li>10 Custom Icons</li>
