--- a/website-design.html
+++ b/website-design.html
@@ -197,7 +197,7 @@ permalink: /website-design/
 					<h2 class="bold">$2,500</h2>
 					<li>5 Pages Included</li>
 					<li>2 Page Prototype</li>
-					<li>Custom CMS</li>
+					<li>Custom CMS or Static Design</li>
 					<li>Hand-coded from Scratch</li>
 					<li>Static Design</li>
 					<li>Mobile Responsive</li>
@@ -223,7 +223,7 @@ permalink: /website-design/
 					<li>5 Page Prototype</li>
 					<li>UX Analysis</li>
 					<li>A/B Testing</li>
-					<li>Custom CMS</li>
+					<li>Custom CMS or Static Design</li>
 					<li>Hand-coded from Scratch</li>
 					<li>Static Design</li>
 					<li>Competitor Research</li>
